# transmorpher-hub

./: .gitignore  .gitmodules  README.md  test_codec.lua
transmorpher-addon/: .gitignore  README.md
transmorpher-addon/StealthMorpher/: CMakeLists.txt  build.bat
transmorpher-addon/StealthMorpher/src/: D3DHooks.cpp  D3DHooks.h  Hooks.cpp  Hooks.h  Logger.h  MSDF.cpp  MSDF.h  Morpher.cpp  Morpher.h  Proxy.cpp  Proxy.h  RenderEnables.cpp  RenderEnables.h  RenderOverrides.cpp  RenderOverrides.h  ShutdownCheck.h  SpellMorph.cpp  SpellMorph.h  Utils.cpp  Utils.h  WoWOffsets.h  dinput8_exports.def  dllmain.cpp  forwarders.cpp
transmorpher-addon/StealthMorpher/src/font_exact/: D3D.cpp  D3D.h  Entry.cpp  Enums.h  GameClient.h  Hooks.cpp  Hooks.h  Lua.h  MSDF.cpp  MSDF.h  MSDFCache.cpp  MSDFCache.h  MSDFFont.cpp  MSDFFont.h  MSDFManager.cpp  MSDFManager.h  MSDFPregen.cpp  MSDFPregen.h  MSDFShaders.h  MSDFUtils.h  MSDFValidator.h  Types.h  Utils.h
transmorpher-addon/Transmorpher/: Transmorpher.toc
transmorpher-addon/Transmorpher/Core/: AuraSpellSwap.lua  Constants.lua  DLLBridge.lua  EventLoop.lua  LoadoutCodec.lua  Logger.lua  MountManager.lua  P2PSync.lua  SlashCommands.lua  State.lua  Utils.lua
transmorpher-addon/Transmorpher/DBC/: CreatureDisplayInfo.dbc  SpellVisual.dbc  SpellVisualEffectName.dbc  SpellVisualKit.dbc  SpellVisualKitModelAttach.dbc
transmorpher-addon/Transmorpher/Textures/: Outfitter-Button-Normal.tga  Outfitter-Button-Pushed.tga  Outfitter-Button.tga
transmorpher-addon/Transmorpher/UI/: BottomButtons.lua  DressingRoomSetup.lua  EnchantSlots.lua  EyeToggle.lua  GlowSystem.lua  MainFrame.lua  MinimapButton.lua  PaperdollButton.lua  Slots.lua  SpecialSlots.lua  WorldAnalysis.lua  WorldEnvironment.lua
transmorpher-addon/Transmorpher/db/: CreatureDisplayDB.lua  EnchantsDB.lua  HunterPetsDB.lua  ItemSetsDB.lua  ItemsAPI.lua  MountsDB.lua  PetsDB.lua  PreviewSetupAPI.lua
transmorpher-addon/Transmorpher/frames/: DressingRoom.lua  ListFrame.lua  PreviewList.lua  SetsTab.lua
transmorpher-addon/Transmorpher/optimizationdb/: T10.lua  T7.lua  T8.lua  T9.lua  VOA.lua
transmorpher-web/: .env.local.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
transmorpher-web/app/: actions.ts  globals.css  layout.tsx  page.tsx
transmorpher-web/app/login/: page.tsx
transmorpher-web/app/newest/: page.tsx
transmorpher-web/app/trending/: page.tsx
transmorpher-web/components/auth/: SetUsernameModal.tsx
transmorpher-web/components/gallery/: CommentSection.tsx  Navbar.tsx  ScreenshotCard.tsx  UploadModal.tsx
transmorpher-web/lib/: loadoutCodec.ts  mockData.ts  types.ts
transmorpher-web/src/lib/: supabase.ts
transmorpher-web/src/scripts/: create_bucket.mjs  test_db.mjs
transmorpher-web/src/types/: database.types.ts
transmorpher-web/supabase/migrations/: 001_initial_schema.sql  002_add_image_url.sql  003_seed_data.sql  004_adjust_rls.sql  005_update_loadouts_categories.sql  006_social_system.sql
transmorpher-web/utils/supabase/: client.ts  (+2 more)
(+12 files in other folders)
